Implement error channel and improve file stability check with configurable delay
Co-authored-by: agienkatech-commits <238891042+agienkatech-commits@users.noreply.github.com>